--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
 							<div class="items">
 
 								<div class="item intro span-2">
-									<h1>Parallelism</h1>
+									 <!-- Logo -->
+									<img src="images/logo/FLO_logo.png" alt="Flo Creative Logo" style="max-width: 200px; height: auto;" />
+									<!-- Company Name -->
+									<h1>Flo Creative</h1>
 									<p>A responsive portfolio site<br />
-									template by HTML5 UP</p>
+										Website by IA</p>
 								</div>
 
 								<article class="item thumb span-1">
