--- a/index.html
+++ b/index.html
@@ -87,7 +87,40 @@
 
 							</div>
 
+														<div class="services">
+								    <div class="service-category">
+								        <h3>Interior Design</h3>
+								        <ul>
+								            <li>Creative concept development</li>
+								            <li>Space solutions and planning</li>
+								            <li>3D Renderings</li>
+								            <li>Technical drawings</li>
+								            <li>Furniture, Fixtures, and Equipment Specifications</li>
+								        </ul>
+								    </div>
+								    <div class="service-category">
+								        <h3>Branding</h3>
+								        <ul>
+								            <li>Branding strategy</li>
+								            <li>Visual identity development</li>
+								            <li>Branded collateral and merchandise</li>
+								            <li>Ambient branding</li>
+								        </ul>
+								    </div>
+								    <div class="service-category">
+								        <h3>Graphic Design and Visual Communications</h3>
+								        <ul>
+								            <li>Campaigns design and management</li>
+								            <li>Marketing collateral including print, digital, and social media</li>
+								            <li>Illustration</li>
+								            <li>Animation</li>
+								        </ul>
+								    </div>
+								</div>
+
+
 					</section>
+				
 
 				<!-- Footer -->
 					<section id="footer">
